force-app/main/default/objects/Activity/fields/Accounting_Upload__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Upload</label>
    <type>Checkbox</type>
</CustomField>