force-app/main/default/objects/Activity/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <formula>IF(ISBLANK(TaskTemplateId__c) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp; AP_Task__r.Action_Plan__c , AP_Task__r.Action_Plan__r.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan</label>
    <type>Text</type>
</CustomField>