force-app/main/default/objects/Activity/fields/Action_Plan_Task__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Task__c</fullName>
    <formula>IF(ISBLANK(AP_Task__c ) , &apos;&apos;, HYPERLINK(&quot;/&quot; &amp; AP_Task__c , AP_Task__r.Subject__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan Task</label>
    <type>Text</type>
</CustomField>