force-app/main/default/objects/Activity/fields/Assigned_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Role__c</fullName>
    <formula>AP_Task__r.Assigned_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Role</label>
    <type>Text</type>
</CustomField>