force-app/main/default/objects/Activity/fields/Completed_date__c.field-meta.xml
<CustomField>
    <fullName>Completed_date__c</fullName>
    <formula>DATEVALUE(IF(IsTask,
CompletedDateTime,
IF(ActivityDateTime + DurationInMinutes / 1440 &lt; NOW(),
ActivityDateTime + DurationInMinutes / 1440,
Null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed date</label>
    <type>Date</type>
</CustomField>