force-app/main/default/objects/Activity/fields/Controlled_by__c.field-meta.xml
<CustomField>
    <fullName>Controlled_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Add a user here whos has controlled the Task</description>
    <label>Controlled by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>