force-app/main/default/objects/Activity/fields/Critial_Task__c.field-meta.xml
<CustomField>
    <fullName>Critial_Task__c</fullName>
    <formula>Case((Task_Number__c),

130, &quot;Financial Reporting&quot;,
210, &quot;VAT Reporting&quot;,
211, &quot;VAT Reporting&quot;,
310, &quot;Payroll Reporting&quot;,
330, &quot;Payroll Reporting&quot;,
400, &quot;Tax Returns Reporting&quot;,
410, &quot;Tax Returns Reporting&quot;,
420, &quot;Shareholder register&quot;,
450, &quot;Tax Returns Reporting&quot;,
460, &quot;Financial Statements&quot;,
510, &quot;Quality Control&quot;,
511, &quot;Quality Control&quot;,
520, &quot;Quality Control&quot;,
525, &quot;Know Your Customer&quot;,
526, &quot;Know Your Customer&quot;,
535, &quot;Quality Control&quot;,
555, &quot;Customer Meeting&quot;,
595, &quot;Quality Control&quot;,
596, &quot;Quality Control&quot;,
850, &quot;VAT Reporting&quot;,
981, &quot;Customer Meeting&quot;,
982, &quot;Customer Meeting&quot;,
991, &quot;Customer Meeting&quot;,
992, &quot;Customer Meeting&quot;,
993, &quot;Customer Meeting&quot;,
1010, &quot;Financial Reporting&quot;,
1020, &quot;VAT Reporting&quot;,
1050, &quot;VAT Reporting&quot;,
1170, &quot;Tax Reporting&quot;,
1230, &quot;Quality Control&quot;,
1260, &quot;Tax Returns Reporting&quot;,
1350, &quot;Quality Control&quot;,
1355, &quot;Financial Statements&quot;,
1405, &quot;Know Your Customer&quot;,
1420, &quot;Know Your Customer&quot;,
1010, &quot;Financial Reporting&quot;,
1020, &quot;VAT Reporting&quot;,
1050, &quot;VAT Reporting&quot;,
1170, &quot;Tax Reporting&quot;,
1230, &quot;Quality Control&quot;,
1260, &quot;Tax Returns Reporting&quot;,
1350, &quot;Quality Control&quot;,
1355, &quot;Financial Statements&quot;,
1405, &quot;Know Your Customer&quot;,
1420, &quot;Know Your Customer&quot;,


&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Critial Task</label>
    <type>Text</type>
</CustomField>