force-app/main/default/objects/Activity/fields/Days_to_Completed__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Completed__c</fullName>
    <formula>IF(ISBLANK(CompletedDateTime), ActivityDate - TODAY(), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>