force-app/main/default/objects/Activity/fields/Overdue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Reason__c</fullName>
    <label>Overdue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late Delivery</fullName>
            </value>
            <value>
                <fullName>Late Payment</fullName>
            </value>
            <value>
                <fullName>Missing Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>