force-app/main/default/objects/Activity/fields/Payroll_Upload__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Upload</label>
    <type>Checkbox</type>
</CustomField>