force-app/main/default/objects/Activity/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <formula>AP_Task__r.ActionPlanTemplate__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scope</label>
    <type>Text</type>
</CustomField>