force-app/main/default/objects/Activity/fields/Task_Classification__c.field-meta.xml
<CustomField>
    <fullName>Task_Classification__c</fullName>
    <formula>Case(Task_Number__c,

100, &quot;ACC-Prepare&quot;,
110, &quot;ACC-Prepare&quot;,
115, &quot;ACC-Prepare&quot;,
120, &quot;ACC-Report&quot;,
129, &quot;ACC-Report&quot;,
130, &quot;ACC-Report&quot;,
150, &quot;ACC-Prepare&quot;,
160, &quot;ACC-Prepare&quot;,
161, &quot;ACC-Prepare&quot;,
179, &quot;ACC-Report&quot;,
180, &quot;ACC-Report&quot;,
188, &quot;CON-Prepare&quot;,
189, &quot;CON-Report&quot;,
190, &quot;ACC-Report&quot;,
191, &quot;ACC-Report&quot;,
192, &quot;ACC-Report&quot;,
193, &quot;CON-Report&quot;,
194, &quot;CON-Report&quot;,
195, &quot;QUA-Prepare&quot;,
196, &quot;ACC-Reconcile&quot;,
197, &quot;CON-Analyse&quot;,
198, &quot;CON-Analyse&quot;,
199, &quot;ACC-Report&quot;,
200, &quot;ACC-Reconcile&quot;,
201, &quot;ACC-Report&quot;,
202, &quot;ACC-Prepare&quot;,
205, &quot;ACC-Report&quot;,
210, &quot;ACC-Reconcile&quot;,
211, &quot;ACC-Report&quot;,
220, &quot;ACC-Report&quot;,
230, &quot;ACC-Prepare&quot;,
231, &quot;ACC-Prepare&quot;,
232, &quot;ACC-Prepare&quot;,
233, &quot;ACC-Prepare&quot;,
234, &quot;ACC-Prepare&quot;,
235, &quot;ACC-Control&quot;,
236, &quot;ACC-Control&quot;,
237, &quot;ACC-Control&quot;,
238, &quot;ACC-Control&quot;,
239, &quot;ACC-Control&quot;,
240, &quot;ACC-Control&quot;,
280, &quot;ACC-Reconcile&quot;,
285, &quot;ACC-Reconcile&quot;,
290, &quot;ACC-Reconcile&quot;,
295, &quot;ACC-Reconcile&quot;,
300, &quot;PAY-Prepare&quot;,
310, &quot;PAY-Report&quot;,
320, &quot;PAY-Report&quot;,
325, &quot;PAY-Reconcile&quot;,
326, &quot;PAY-Reconcile&quot;,
330, &quot;PAY-Reconcile&quot;,
335, &quot;PAY-Prepare&quot;,
336, &quot;PAY-Prepare&quot;,
340, &quot;PAY-Prepare&quot;,
341, &quot;PAY-Report&quot;,
342, &quot;PAY-Report&quot;,
343, &quot;PAY-Prepare&quot;,
344, &quot;PAY-Prepare&quot;,
345, &quot;PAY-Prepare&quot;,
400, &quot;FIS-Prepare&quot;,
401, &quot;FIS-Report&quot;,
410, &quot;FIS-Prepare&quot;,
411, &quot;FIS-Report&quot;,
418, &quot;FIS-Prepare&quot;,
419, &quot;FIS-Prepare&quot;,
420, &quot;FIS-Report&quot;,
450, &quot;FIS-Prepare&quot;,
451, &quot;FIS-Report&quot;,
460, &quot;FIS-Prepare&quot;,
461, &quot;FIS-Report&quot;,
462, &quot;FIS-Control&quot;,
463, &quot;FIS-Control&quot;,
464, &quot;FIS-Control&quot;,
470, &quot;ACC-Report&quot;,
475, &quot;FIS-Prepare&quot;,
476, &quot;FIS-Prepare&quot;,
478, &quot;FIS-Report&quot;,
479, &quot;FIS-Prepare&quot;,
480, &quot;FIS-Prepare&quot;,
500, &quot;QUA-Prepare&quot;,
501, &quot;FIS-Prepare&quot;,
510, &quot;QUA-Control&quot;,
511, &quot;FIS-Control&quot;,
520, &quot;QUA-Control&quot;,
525, &quot;QUA-Control&quot;,
526, &quot;QUA-Control&quot;,
530, &quot;QUA-Control&quot;,
535, &quot;QUA-Control&quot;,
540, &quot;FIS-Report&quot;,
545, &quot;QUA-Prepare&quot;,
550, &quot;ACC-Prepare&quot;,
555, &quot;Meeting-&quot;,
590, &quot;QUA-Prepare&quot;,
595, &quot;QUA-Control&quot;,
596, &quot;QUA-Control&quot;,
600, &quot;QUA-Prepare&quot;,
700, &quot;ACC-Reconcile&quot;,
701, &quot;ACC-Prepare&quot;,
702, &quot;ACC-Prepare&quot;,
703, &quot;ACC-Prepare&quot;,
704, &quot;ACC-Reconcile&quot;,
800, &quot;PAY-Report&quot;,
801, &quot;PAY-Report&quot;,
802, &quot;PAY-Report&quot;,
850, &quot;ACC-Reconcile&quot;,
900, &quot;QUA-Prepare&quot;,
981, &quot;Meeting&quot;,
982, &quot;Meeting&quot;,
991, &quot;Meeting&quot;,
992, &quot;Meeting&quot;,
993, &quot;Meeting&quot;,
999, &quot;Custom&quot;,
1000, &quot;ACC-Reconcile&quot;,
1010, &quot;ACC-Report&quot;,
1020, &quot;ACC-Reconcile&quot;,
1030, &quot;ACC-Report&quot;,
1031, &quot;ACC-Report&quot;,
1032, &quot;ACC-Report&quot;,
1033, &quot;ACC-Report&quot;,
1034, &quot;ACC-Report&quot;,
1040, &quot;ACC-Report&quot;,
1050, &quot;ACC-Report&quot;,
1100, &quot;PAY-Prepare&quot;,
1110, &quot;PAY-Prepare&quot;,
1120, &quot;PAY-Prepare&quot;,
1130, &quot;PAY-Control&quot;,
1140, &quot;PAY-Control&quot;,
1141, &quot;PAY-Control&quot;,
1150, &quot;PAY-Report&quot;,
1160, &quot;PAY-Report&quot;,
1170, &quot;PAY-Report&quot;,
1180, &quot;PAY-Report&quot;,
1190, &quot;PAY-Reconcile&quot;,
1200, &quot;FIS-Prepare&quot;,
1210, &quot;FIS-Prepare&quot;,
1220, &quot;FIS-Prepare&quot;,
1221, &quot;FIS-Report&quot;,
1230, &quot;FIS-Prepare&quot;,
1231, &quot;FIS-Control&quot;,
1232, &quot;FIS-Report&quot;,
1240, &quot;FIS-Report&quot;,
1250, &quot;FIS-Prepare&quot;,
1260, &quot;FIS-Report&quot;,
1270, &quot;FIS-Report&quot;,
1300, &quot;FIS-Prepare&quot;,
1310, &quot;FIS-Prepare&quot;,
1320, &quot;FIS-Report&quot;,
1330, &quot;FIS-Control&quot;,
1340, &quot;FIS-Report&quot;,
1350, &quot;FIS-Control&quot;,
1355, &quot;FIS-Report&quot;,
1356, &quot;FIS-Report&quot;,
1360, &quot;FIS-Report&quot;,
1370, &quot;FIS-Reconcile&quot;,
1380, &quot;FIS-Report&quot;,
1400, &quot;QUA-Prepare&quot;,
1405, &quot;QUA-Prepare&quot;,
1410, &quot;CON-Prepare&quot;,
1420, &quot;QUA-Prepare&quot;,
1430, &quot;CON-Report&quot;,
1431, &quot;CON-Report&quot;,
1440, &quot;CON-Report&quot;,
1450, &quot;CON-Report&quot;,
1500, &quot;PAY-Report&quot;,
1510, &quot;QUA-Prepare&quot;,
1520, &quot;PAY-Report&quot;,
1530, &quot;PAY-Report&quot;,
1540, &quot;PAY-Report&quot;,
1550, &quot;PAY-Report&quot;,
1560, &quot;PAY-Report&quot;,
1601, &quot;QUA-Prepare&quot;,
1602, &quot;QUA-Prepare&quot;,

&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Classification</label>
    <type>Text</type>
</CustomField>