force-app/main/default/objects/Activity/fields/Task_Control__c.field-meta.xml
<CustomField>
    <fullName>Task_Control__c</fullName>
    <label>Task Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Deviated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>