force-app/main/default/objects/Activity/fields/Task_Control_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Control_Modified_Date__c</fullName>
    <label>Task Control Modified Date</label>
    <type>DateTime</type>
</CustomField>