force-app/main/default/objects/Activity/fields/Task_Descripton__c.field-meta.xml
<CustomField>
    <fullName>Task_Descripton__c</fullName>
    <formula>TEXT(Task_Number__c) &amp; &quot; &quot;&amp; Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Descripton</label>
    <type>Text</type>
</CustomField>