force-app/main/default/objects/Activity/fields/Task_sequence__c.field-meta.xml
<CustomField>
    <fullName>Task_sequence__c</fullName>
    <formula>Case(Task_Number__c,
115,&quot;A1.0&quot;,
100,&quot;A1.0&quot;,
200,&quot;A1.2&quot;,
280,&quot;A1.3&quot;,
285,&quot;A1.3&quot;,
230,&quot;A1.3&quot;,
340,&quot;A1.3&quot;,
231,&quot;A1.4&quot;,
232,&quot;A1.5&quot;,
233,&quot;A1.6&quot;,
234,&quot;A1.6&quot;,
235,&quot;A1.7&quot;,
236,&quot;A1.7&quot;,
238,&quot;A1.7&quot;,
239,&quot;A1.8&quot;,
240,&quot;A1.9&quot;,
129,&quot;A2.1&quot;,
130,&quot;A2.2&quot;,
237,&quot;A1.7&quot;,
179,&quot;A2.3&quot;,
180,&quot;A2.3&quot;,
325,&quot;P2.0&quot;,
300,&quot;P1.0&quot;,
310,&quot;P1.1&quot;,
320,&quot;P2.1&quot;,
330,&quot;P3.0&quot;,
510,&quot;S1.6&quot;,
500,&quot;S1.5&quot;,
520,&quot;S1.0&quot;,
525,&quot;S1.1&quot;,
535,&quot;S1.2&quot;,
545,&quot;S1.4&quot;,
555,&quot;S1.3&quot;,
981,&quot;S1.4&quot;,
982,&quot;S1.4&quot;,
205,&quot;V1.0&quot;,
210,&quot;V1.1&quot;,
220,&quot;V1.1&quot;,
418,&quot;Y1.1&quot;,
419,&quot;Y1.2&quot;,
420,&quot;Y0.0&quot;,
450,&quot;Y1.3&quot;,
460,&quot;Y1.3&quot;,
501,&quot;Y1.4&quot;,
511,&quot;Y1.5&quot;,
475,&quot;Y1.6&quot;,
476,&quot;Y1.7&quot;,
477,&quot;Y1.8&quot;,
451,&quot;Y1.9&quot;,
461,&quot;Y1.9&quot;,
463,&quot;Y2.1&quot;,
462,&quot;Y2.2&quot;,
478,&quot;Y2.3&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task sequence</label>
    <type>Text</type>
</CustomField>